--- a/tests/runner.html
+++ b/tests/runner.html
@@ -4,16 +4,16 @@
   <meta charset="utf-8">
   <title>Mocha Tests</title>
 
-  <link rel="stylesheet" href="libs/mocha.css" />
+  <link rel="stylesheet" href="/tests/libs/mocha.css" />
 
 </head>
 <body>
   <div id="mocha"></div>
   <div id="test"></div>
 
-  <script src="libs/jquery.js"></script>
-  <script src="libs/chai.js"></script>
-  <script src="libs/mocha.js"></script>
+  <script src="/lib/jquery.js"></script>
+  <script src="/tests/libs/chai.js"></script>
+  <script src="/tests/libs/mocha.js"></script>
   <script>
     window.expect = chai.expect;
     window.assert = chai.assert;
